--- a/src/components/gg-tv/gg-tv.css
+++ b/src/components/gg-tv/gg-tv.css
@@ -1,5 +1,9 @@
-gg-tv {
-    table, th, td {
-        border: 1px solid black;
+gg-tv 
+    table, gg-tv th, gg-tv td {
+        border: 1px solid #7289da;
+    }
+        gg-tv table {
+            min-width: 100%;
       }
-}
+      
+
